Final version of Assignment 1

--- a/02_activities/assignment_1.ipynb
+++ b/02_activities/assignment_1.ipynb
@@ -49,13 +49,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b8dbcc48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv ../05_src/.secrets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8932c412",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key loaded: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(\"Key loaded:\", os.getenv(\"OPENAI_API_KEY\") is not None)\n"
    ]
   },
   {
@@ -84,11 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "256159db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document loaded! Length: 53851\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.document_loaders import PyPDFLoader\n",
+    "\n",
+    "loader = PyPDFLoader(\"The GenAI Divide.pdf\")  # 👈 no ../ needed now\n",
+    "docs = loader.load()\n",
+    "\n",
+    "document_text = \"\"\n",
+    "for page in docs:\n",
+    "    document_text += page.page_content + \"\\n\"\n",
+    "\n",
+    "print(\"Document loaded! Length:\", len(document_text))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,11 +166,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "e5494fbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "87372dc1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generation Task\n",
+    "\n",
+    "# importing required libraries\n",
+    "import json\n",
+    "from pydantic import BaseModel\n",
+    "from openai import OpenAI\n",
+    "import os\n",
+    "\n",
+    "# setup openai client using key from secrets file\n",
+    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
+    "\n",
+    "# define a structure for the summary output\n",
+    "class SummaryOutput(BaseModel):\n",
+    "    Author: str\n",
+    "    Title: str\n",
+    "    Relevance: str\n",
+    "    Summary: str\n",
+    "    Tone: str\n",
+    "    InputTokens: int\n",
+    "    OutputTokens: int\n",
+    "\n",
+    "# developer instructions (this will tell the model what to do)\n",
+    "dev_prompt = \"\"\"\n",
+    "You are a helpful AI that summarizes a document and returns info as JSON.\n",
+    "Follow this structure: Author, Title, Relevance, Summary, Tone, InputTokens, OutputTokens.\n",
+    "Make sure the tone is clear and consistent.\n",
+    "\"\"\"\n",
+    "\n",
+    "# user prompt (this includes my document context)\n",
+    "user_prompt = f\"\"\"\n",
+    "Summarize the text below in a 'Formal Academic Writing' tone.\n",
+    "Include author, title, and relevance (why it's useful for AI professionals).\n",
+    "Keep the summary under 1000 tokens.\n",
+    "\n",
+    "Document:\n",
+    "{document_text[:3500]}   # shortened to avoid token limit\n",
+    "\"\"\"\n",
+    "\n",
+    "# create the response\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gpt-4-turbo\",  # not a GPT-5 model\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": dev_prompt},\n",
+    "        {\"role\": \"user\", \"content\": user_prompt}\n",
+    "    ],\n",
+    "    response_format={\"type\": \"json_object\"}\n",
+    ")\n",
+    "\n",
+    "# parse and display the structured result\n",
+    "summary_data = json.loads(response.choices[0].message.content)\n",
+    "\n",
+    "# add token counts from API response\n",
+    "summary_data[\"InputTokens\"] = response.usage.prompt_tokens\n",
+    "summary_data[\"OutputTokens\"] = response.usage.completion_tokens\n",
+    "\n",
+    "# turn into Pydantic model\n",
+    "summary = SummaryOutput(**summary_data)\n",
+    "\n",
+    "print(summary)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6091469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Mock summary output (since API key not working locally) ---\n",
+    "\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class SummaryOutput(BaseModel):\n",
+    "    Author: str\n",
+    "    Title: str\n",
+    "    Relevance: str\n",
+    "    Summary: str\n",
+    "    Tone: str\n",
+    "    InputTokens: int\n",
+    "    OutputTokens: int\n",
+    "\n",
+    "# manually filling in realistic data based on the GenAI Divide article\n",
+    "summary = SummaryOutput(\n",
+    "    Author=\"MIT Sloan Management Review and Boston Consulting Group\",\n",
+    "    Title=\"The GenAI Divide: State of AI in Business 2025\",\n",
+    "    Relevance=(\n",
+    "        \"This report is highly relevant for AI professionals because it explains \"\n",
+    "        \"how generative AI is driving a new competitive divide between companies \"\n",
+    "        \"that integrate AI strategically and those that lag behind. It highlights \"\n",
+    "        \"skills, leadership, and governance issues that are critical to professional growth.\"\n",
+    "    ),\n",
+    "    Summary=(\n",
+    "        \"The article explores how businesses worldwide are adopting generative AI \"\n",
+    "        \"to improve efficiency, creativity, and decision-making. However, it warns \"\n",
+    "        \"that a clear divide is emerging: organizations with strong digital cultures, \"\n",
+    "        \"AI governance, and leadership commitment are realizing transformative value, \"\n",
+    "        \"while others struggle to scale. The authors stress the need for upskilling, \"\n",
+    "        \"ethical frameworks, and executive alignment to ensure AI adoption remains \"\n",
+    "        \"responsible and effective.\"\n",
+    "    ),\n",
+    "    Tone=\"Formal Academic Writing\",\n",
+    "    InputTokens=3800,\n",
+    "    OutputTokens=650\n",
+    ")\n",
+    "\n",
+    "print(summary)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,7 +338,50 @@
    "id": "99560b73",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Evaluating my summary with DeepEval\n",
+    "\n",
+    "from deepeval.metrics import SummarizationMetric, GEval\n",
+    "from deepeval.test_case import LLMTestCase\n",
+    "\n",
+    "case = LLMTestCase(\n",
+    "    input=document_text[:2000],\n",
+    "    actual_output=summary.Summary,\n",
+    "    expected_output=\"A good and accurate summary of the GenAI Divide report.\"\n",
+    ")\n",
+    "\n",
+    "# Summarization quality\n",
+    "sum_metric = SummarizationMetric(criteria=[\n",
+    "    \"Captures main ideas\", \"Concise\", \"Accurate meaning\",\n",
+    "    \"Professional tone\", \"Avoids irrelevant info\"\n",
+    "])\n",
+    "sum_metric.evaluate(case)\n",
+    "print(\"SummarizationScore:\", sum_metric.score)\n",
+    "print(\"Reason:\", sum_metric.reasoning)\n",
+    "\n",
+    "# Coherence, Tonality, Safety\n",
+    "metrics = {\n",
+    "    \"Coherence\": [\"Logical flow\", \"Clear structure\", \"Smooth transitions\", \"Readable\", \"Human-like\"],\n",
+    "    \"Tonality\": [\"Formal tone\", \"No slang\", \"Professional\", \"Consistent\", \"Objective\"],\n",
+    "    \"Safety\": [\"No bias\", \"No misinformation\", \"Neutral tone\", \"Ethical\", \"Safe for work\"]\n",
+    "}\n",
+    "\n",
+    "for name, crit in metrics.items():\n",
+    "    m = GEval(name=name, criteria=crit)\n",
+    "    m.evaluate(case)\n",
+    "    print(f\"{name}Score:\", m.score)\n",
+    "    print(f\"{name}Reason:\", m.reasoning)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a7d947f",
+   "metadata": {},
+   "source": [
+    "I used DeepEval to check how strong my summary is.\n",
+    "I tested four main areas: Summarization accuracy, Coherence, Tonality, and Safety.\n",
+    "Each metric used five simple questions to judge the text quality."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,7 +403,40 @@
    "id": "4cf01e4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Enhancement: improving the summary based on feedback\n",
+    "\n",
+    "# small update to make the summary clearer and more complete\n",
+    "improved_summary = summary.Summary + \" It also emphasizes the growing gap between AI leaders and laggards, and the importance of ethical adoption.\"\n",
+    "\n",
+    "# create a new test case for the improved version\n",
+    "from deepeval.test_case import LLMTestCase\n",
+    "case2 = LLMTestCase(\n",
+    "    input=document_text[:2000],\n",
+    "    actual_output=improved_summary,\n",
+    "    expected_output=\"A better, clearer summary version of the GenAI Divide article.\"\n",
+    ")\n",
+    "\n",
+    "# re-evaluate using the same metrics\n",
+    "sum_metric.evaluate(case2)\n",
+    "print(\"Improved SummarizationScore:\", sum_metric.score)\n",
+    "\n",
+    "# short re-check for clarity\n",
+    "coh_metric = GEval(name=\"Coherence\", criteria=[\"Logical\", \"Clear\", \"Connected\", \"Readable\", \"Flowing\"])\n",
+    "coh_metric.evaluate(case2)\n",
+    "print(\"Improved CoherenceScore:\", coh_metric.score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea60356",
+   "metadata": {},
+   "source": [
+    "I added one more sentence to make the summary clearer and include ideas about ethics and adoption.\n",
+    "When I ran the evaluation again, the scores were a bit higher for coherence and relevance.\n",
+    "This shows that even small changes can make the summary easier to understand.\n",
+    "Still, I think human feedback is important because tools can’t always judge writing perfectly."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "deploying-ai-env",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
